<resources>
    <string name="app_name">Image Application</string>
    <string name="type">Тип файла</string>
    <string name="username">user</string>
    <string name="title">Заголовок</string>
    <string name="import_datetime">Дата загрузки</string>
    <string name="text_view_request">Сформируйте ваш запрос</string>
    <string name="text_view_word">Введите фразу для поиска</string>
    <string name="text_view_limit">Введите limit</string>
    <string name="text_view_offset">Введите отступ</string>
    <string name="text_view_text_view_spinner_rating">Укажите rating </string>
    <string name="text_view_text_view_spinner_language">Введи язык поиска</string>
    <string-array name="spinner_array_for_rating">
        <item>g</item>
        <item>pg</item>
        <item>pg-13</item>
        <item>r</item>
    </string-array>
    <string-array name="spinner_array_for_language">
        <item>en</item>
        <item>uk</item>
        <item>ru</item>
    </string-array>
</resources>