<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/text_view_request"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TableLayout android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow >


        <TextView
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_word" />

        <TextView
            android:textAlignment="center"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_view_limit" />

        <TextView
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/text_view_offset" />
       </TableRow>
        <TableRow>
            <EditText
                android:id="@+id/edit_text_query"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:id="@+id/edit_text_limit"
                android:inputType="number"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
            <EditText
                android:inputType="number"
                android:id="@+id/edit_text_offset"
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </TableRow>
        <TableRow>
            <TextView
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_text_view_spinner_rating" />
            <TextView
                android:textAlignment="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_view_text_view_spinner_language" />

        </TableRow>
        <TableRow>
            <Spinner android:layout_weight="1" android:id="@+id/spinner_for_rating">

            </Spinner >
            <Spinner android:layout_weight="1" android:id="@+id/spinner_for_language">
            </Spinner>
        </TableRow>

    </TableLayout>



    <Button
        android:id="@+id/button_start"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Start" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>